Fix for View more button visibility

--- a/tvaultui/src/app/Features/admin/admin.scss
+++ b/tvaultui/src/app/Features/admin/admin.scss
@@ -373,3 +373,9 @@
 .pagination-wrapper {
     position: unset!important;
 }
+
+.container-fluid-wrapper.curved {
+    margin-bottom: 10px;
+    min-height: 100%!important;
+    height: auto!important;
+}
